--- a/MySelenium/test-output/emailable-report.html
+++ b/MySelenium/test-output/emailable-report.html
@@ -9,13 +9,13 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">79,276</td><td></td><td></td></tr>
+<tr><td><a href="#t0">DataDriven4.CorrectUserName</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">31,983</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">Week1.Day1.BothCorrect</td><td><a href="#m0">loginForm</a></td><td rowspan="1">1616319942431</td><td rowspan="1">22855</td></tr><tr class="passedodd"><td rowspan="1">Week1.Day1.BothInCorrect</td><td><a href="#m1">loginForm</a></td><td rowspan="1">1616319926840</td><td rowspan="1">15589</td></tr><tr class="passedeven"><td rowspan="1">Week1.Day1.CorrectUserName</td><td><a href="#m2">loginForm</a></td><td rowspan="1">1616319886107</td><td rowspan="1">19887</td></tr><tr class="passedodd"><td rowspan="1">Week1.Day1.WrongUserName</td><td><a href="#m3">loginForm</a></td><td rowspan="1">1616319906017</td><td rowspan="1">20819</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">DataDriven4.CorrectUserName &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">DataDriven4.LoginForm</td><td><a href="#m0">allForm</a></td><td rowspan="4">1616404977757</td><td rowspan="4">7778</td></tr><tr class="passedeven"><td><a href="#m1">allForm</a></td></tr><tr class="passedeven"><td><a href="#m2">allForm</a></td></tr><tr class="passedeven"><td><a href="#m3">allForm</a></td></tr></tbody>
 </table>
-<h2>Test</h2><h3 id="m0">Week1.Day1.BothCorrect#loginForm</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">Week1.Day1.BothInCorrect#loginForm</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">Week1.Day1.CorrectUserName#loginForm</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">Week1.Day1.WrongUserName#loginForm</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>DataDriven4.CorrectUserName</h2><h3 id="m0">DataDriven4.LoginForm#allForm</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>Admin</td><td>admin123</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">DataDriven4.LoginForm#allForm</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>THIRD</td><td>admin1234</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">DataDriven4.LoginForm#allForm</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>FIRST</td><td>admin1234</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">DataDriven4.LoginForm#allForm</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>SECOND</td><td>admin123</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
