--- a/MySelenium/test-output/index.html
+++ b/MySelenium/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Suite" class="navigator-link ">
-                    <span>C:\Users\kv_ka\git\repository\MySelenium\src\main\java\TestNG.xml</span>
+                    <span>C:\Users\kv_ka\git\repository\MySelenium\src\main\java\DataDriven4\TestNG.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -104,22 +104,22 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="Week1.Day1.CorrectUserName" class="method navigator-link" hash-for-method="loginForm">loginForm</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="DataDriven4.LoginForm" class="method navigator-link" hash-for-method="allForm(Admin, admin123)">allForm(Admin, admin123)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="Week1.Day1.BothInCorrect" class="method navigator-link" hash-for-method="loginForm">loginForm</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="DataDriven4.LoginForm" class="method navigator-link" hash-for-method="allForm(THIRD, admin1234)">allForm(THIRD, admin1234)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="Week1.Day1.BothCorrect" class="method navigator-link" hash-for-method="loginForm">loginForm</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="DataDriven4.LoginForm" class="method navigator-link" hash-for-method="allForm(FIRST, admin1234)">allForm(FIRST, admin1234)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="Week1.Day1.WrongUserName" class="method navigator-link" hash-for-method="loginForm">loginForm</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="DataDriven4.LoginForm" class="method navigator-link" hash-for-method="allForm(SECOND, admin123)">allForm(SECOND, admin123)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite -->
@@ -137,59 +137,39 @@
           <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">Week1.Day1.CorrectUserName</span>
+              <span class="class-name">DataDriven4.LoginForm</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="loginForm">
-                  </a> <!-- loginForm -->
-                  <span class="method-name">loginForm</span>
+                  <a name="allForm(Admin, admin123)">
+                  </a> <!-- allForm(Admin, admin123) -->
+                  <span class="method-name">allForm</span>
+                  <span class="parameters">(Admin, admin123)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Suite-class-passed -->
-          <div class="suite-Suite-class-passed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
-              <span class="class-name">Week1.Day1.BothCorrect</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="loginForm">
-                  </a> <!-- loginForm -->
-                  <span class="method-name">loginForm</span>
+                  <a name="allForm(THIRD, admin1234)">
+                  </a> <!-- allForm(THIRD, admin1234) -->
+                  <span class="method-name">allForm</span>
+                  <span class="parameters">(THIRD, admin1234)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Suite-class-passed -->
-          <div class="suite-Suite-class-passed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
-              <span class="class-name">Week1.Day1.BothInCorrect</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="loginForm">
-                  </a> <!-- loginForm -->
-                  <span class="method-name">loginForm</span>
+                  <a name="allForm(FIRST, admin1234)">
+                  </a> <!-- allForm(FIRST, admin1234) -->
+                  <span class="method-name">allForm</span>
+                  <span class="parameters">(FIRST, admin1234)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Suite-class-passed -->
-          <div class="suite-Suite-class-passed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
-              <span class="class-name">Week1.Day1.WrongUserName</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="loginForm">
-                  </a> <!-- loginForm -->
-                  <span class="method-name">loginForm</span>
+                  <a name="allForm(SECOND, admin123)">
+                  </a> <!-- allForm(SECOND, admin123) -->
+                  <span class="method-name">allForm</span>
+                  <span class="parameters">(SECOND, admin123)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -197,21 +177,18 @@
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\kv_ka\git\repository\MySelenium\src\main\java\TestNG.xml</span>
+            <span class="header-content">C:\Users\kv_ka\git\repository\MySelenium\src\main\java\DataDriven4\TestNG.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;https://testng.org/testng-1.0.dtd&quot;&gt;
 &lt;suite name=&quot;Suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
-  &lt;test thread-count=&quot;5&quot; name=&quot;Test&quot;&gt;
+  &lt;test thread-count=&quot;5&quot; name=&quot;DataDriven4.CorrectUserName&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;Week1.Day1.CorrectUserName&quot;/&gt;
-      &lt;class name=&quot;Week1.Day1.WrongUserName&quot;/&gt;
-      &lt;class name=&quot;Week1.Day1.BothInCorrect&quot;/&gt;
-      &lt;class name=&quot;Week1.Day1.BothCorrect&quot;/&gt;
+      &lt;class name=&quot;DataDriven4.LoginForm&quot;/&gt;
     &lt;/classes&gt;
-  &lt;/test&gt; &lt;!-- Test --&gt;
+  &lt;/test&gt; &lt;!-- DataDriven4.CorrectUserName --&gt;
 &lt;/suite&gt; &lt;!-- Suite --&gt;
             </pre>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -223,7 +200,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Test (4 classes)</span>
+                <span class="test-name">DataDriven4.CorrectUserName (1 class)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -251,26 +228,26 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(4);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'loginForm')
-data.setCell(0, 2, 'Week1.Day1.BothCorrect')
-data.setCell(0, 3, 22855);
+data.setCell(0, 1, 'allForm')
+data.setCell(0, 2, 'DataDriven4.LoginForm')
+data.setCell(0, 3, 7778);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'loginForm')
-data.setCell(1, 2, 'Week1.Day1.WrongUserName')
-data.setCell(1, 3, 20819);
+data.setCell(1, 1, 'allForm')
+data.setCell(1, 2, 'DataDriven4.LoginForm')
+data.setCell(1, 3, 3227);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'loginForm')
-data.setCell(2, 2, 'Week1.Day1.CorrectUserName')
-data.setCell(2, 3, 19887);
+data.setCell(2, 1, 'allForm')
+data.setCell(2, 2, 'DataDriven4.LoginForm')
+data.setCell(2, 3, 2571);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'loginForm')
-data.setCell(3, 2, 'Week1.Day1.BothInCorrect')
-data.setCell(3, 3, 15589);
+data.setCell(3, 1, 'allForm')
+data.setCell(3, 2, 'DataDriven4.LoginForm')
+data.setCell(3, 3, 2493);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 minutes</span>
+              <span class="suite-total-time">Total running time: 16 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -296,32 +273,31 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">Week1.Day1.CorrectUserName</div> <!-- chronological-class-name -->
-              <div class="test-method">
-                <span class="method-name">loginForm</span>
+              <div class="chronological-class-name">DataDriven4.LoginForm</div> <!-- chronological-class-name -->
+              <div class="configuration-test before">
+                <span class="method-name">beforeTest</span>
                 <span class="method-start">0 ms</span>
-              </div> <!-- test-method -->
-            </div> <!-- chronological-class -->
-            <div class="chronological-class">
-              <div class="chronological-class-name">Week1.Day1.WrongUserName</div> <!-- chronological-class-name -->
+              </div> <!-- configuration-test before -->
               <div class="test-method">
-                <span class="method-name">loginForm</span>
-                <span class="method-start">19910 ms</span>
+                <span class="method-name">allForm(FIRST, admin1234)</span>
+                <span class="method-start">9950 ms</span>
               </div> <!-- test-method -->
-            </div> <!-- chronological-class -->
-            <div class="chronological-class">
-              <div class="chronological-class-name">Week1.Day1.BothInCorrect</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">loginForm</span>
-                <span class="method-start">40733 ms</span>
+                <span class="method-name">allForm(SECOND, admin123)</span>
+                <span class="method-start">13184 ms</span>
               </div> <!-- test-method -->
-            </div> <!-- chronological-class -->
-            <div class="chronological-class">
-              <div class="chronological-class-name">Week1.Day1.BothCorrect</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">loginForm</span>
-                <span class="method-start">56324 ms</span>
+                <span class="method-name">allForm(THIRD, admin1234)</span>
+                <span class="method-start">15680 ms</span>
               </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">allForm(Admin, admin123)</span>
+                <span class="method-start">18254 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-test after">
+                <span class="method-name">afterTest</span>
+                <span class="method-start">26043 ms</span>
+              </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
