--- a/MySelenium/test-output/old/Default suite/classes.html
+++ b/MySelenium/test-output/old/Default suite/classes.html
@@ -4,7 +4,7 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>Week1.Day1.CorrectUserName</td>
+<td>DataDriven4.LoginForm</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
