--- a/MySelenium/test-output/old/Suite/methods.html
+++ b/MySelenium/test-output/old/Suite/methods.html
@@ -1,12 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6297d2">  <td>21/03/21 15:14:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CorrectUserName.loginForm()[pri:0, instance:Week1.Day1.CorrectUserName@7f010382]">loginForm</td> 
-  <td>main@1357563986</td>   <td></td> </tr>
-<tr bgcolor="d0fbae">  <td>21/03/21 15:15:06</td>   <td>19913</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WrongUserName.loginForm()[pri:0, instance:Week1.Day1.WrongUserName@1e802ef9]">loginForm</td> 
-  <td>main@1357563986</td>   <td></td> </tr>
-<tr bgcolor="8bf671">  <td>21/03/21 15:15:26</td>   <td>40736</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BothInCorrect.loginForm()[pri:0, instance:Week1.Day1.BothInCorrect@2b6faea6]">loginForm</td> 
-  <td>main@1357563986</td>   <td></td> </tr>
-<tr bgcolor="a2f981">  <td>21/03/21 15:15:42</td>   <td>56327</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BothCorrect.loginForm()[pri:0, instance:Week1.Day1.BothCorrect@778d1062]">loginForm</td> 
-  <td>main@1357563986</td>   <td></td> </tr>
+<tr bgcolor="a2f981">  <td>21/03/22 14:52:39</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;LoginForm.beforeTest()[pri:0, instance:DataDriven4.LoginForm@1b1473ab]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@686466458</td>   <td></td> </tr>
+<tr bgcolor="a2f981">  <td>21/03/22 14:52:49</td>   <td>9934</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginForm.allForm(java.lang.String, java.lang.String)[pri:0, instance:DataDriven4.LoginForm@1b1473ab]">allForm</td> 
+  <td>main@686466458</td>   <td></td> </tr>
+<tr bgcolor="a2f981">  <td>21/03/22 14:52:52</td>   <td>13168</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginForm.allForm(java.lang.String, java.lang.String)[pri:0, instance:DataDriven4.LoginForm@1b1473ab]">allForm</td> 
+  <td>main@686466458</td>   <td></td> </tr>
+<tr bgcolor="a2f981">  <td>21/03/22 14:52:55</td>   <td>15664</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginForm.allForm(java.lang.String, java.lang.String)[pri:0, instance:DataDriven4.LoginForm@1b1473ab]">allForm</td> 
+  <td>main@686466458</td>   <td></td> </tr>
+<tr bgcolor="a2f981">  <td>21/03/22 14:52:57</td>   <td>18237</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginForm.allForm(java.lang.String, java.lang.String)[pri:0, instance:DataDriven4.LoginForm@1b1473ab]">allForm</td> 
+  <td>main@686466458</td>   <td></td> </tr>
+<tr bgcolor="a2f981">  <td>21/03/22 14:53:05</td>   <td>26027</td> <td>&nbsp;</td><td title="&lt;&lt;LoginForm.afterTest()[pri:0, instance:DataDriven4.LoginForm@1b1473ab]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@686466458</td>   <td></td> </tr>
 </table>
